# PPO-LLM-Strategy-Shaping

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_setup.ipynb  02_training.ipynb  03_fixed_partner_retraining_diagnostic.ipynb  03_nash_analysis.ipynb  04_latency_analysis.ipynb  04_robustness_analysis.ipynb  05_robustness_analysis.ipynb  06_llm_sensitivity.ipynb  06_task_completion.ipynb  07_llm_sensitivity.ipynb  experiments.ipynb
src/ppo_llm_strategy_shaping/: __init__.py  config.py  env_wrappers.py  evaluation.py  llm_shaping.py  train.py  utils.py
